references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/PartUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:8c46d99694a299484892652080419490210673d0e7f949c652672041f9f757c8
size 3316
